--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
   padding: 20px;
   font-family: segoe UI;
   background-image:url(" ");
-  background-image-repeat:no-repeat; 
-  background-image-size:cover;
+  background-repeat:no-repeat; 
+  background-size:cover;
   color:#5ac7a2;
 }
 .container > p{
