--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
   padding: 20px;
   font-family: segoe UI;
-  background-image:url(" ");
+  background-image:url("homepage.jpg ");
   background-repeat:no-repeat; 
   background-size:cover;
   color:#5ac7a2;
